2010-08-20  Nicolas François  <nicolas.francois@centraliens.net>

	* src/usermod.c: Re-indent.

2010-08-20  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/commonio.c: Avoid multi-statements lines.

2010-08-20  Nicolas François  <nicolas.francois@centraliens.net>

	* man/po/fr.po: Fix a typo.

2010-04-12  Nicolas François  <nicolas.francois@centraliens.net>

	* man/po/fr.po: Fix some typos. Minor updates: 886t70f187u.

2010-04-12  Nicolas François  <nicolas.francois@centraliens.net>

	* po/shadow.pot, man/po/shadow-man-pages.pot: Regenerated.
	* po/*.po, man/po/*.po: Updated PO files.

2010-04-05  Nicolas François  <nicolas.francois@centraliens.net>

	* man/newusers.8.xml, man/useradd.8.xml, man/groupadd.8.xml,
	man/login.defs.d/UMASK.xml, man/login.defs.d/CREATE_HOME.xml,
	man/login.defs.d/LOGIN_RETRIES.xml: Fix typos: choosen, overriden,
	bahavior.

2010-04-04  Nicolas François  <nicolas.francois@centraliens.net>

	* man/usermod.8.xml: Document changes of ownerships.

2010-04-04  Nicolas François  <nicolas.francois@centraliens.net>

	* man/vipw.8.xml: Fix formatting typo.
	* man/vipw.8.xml: Document the login.defs parameters only when tcb
	is enabled.

2010-04-04  Nicolas François  <nicolas.francois@centraliens.net>

	* src/useradd.c: spool is a constant string.
	* src/useradd.c: Set the new copy_tree's paramater 'copy_root' to false 

2010-04-04  Nicolas François  <nicolas.francois@centraliens.net>

	* src/usermod.c: move_home() is only called if mflg is set.
	* src/usermod.c: Fail is -m is provided but the old home directory
	is not a directory.
	* src/usermod.c: Use the previous improvement of copy_tree to
	provide better error diagnosis.
	* src/usermod.c: When rename() is used, also change the ownership.
	* src/usermod.c: Do not change the ownership of the root directory
	twice.
	* src/usermod.c: When -u is provided, only change the ownership of
	the home directory if it is a directory.
	* src/usermod.c: Also change ownerships when -g is used.
